# fsqlctl

./: Cargo.toml  Changes.md  README.md
.github/workflows/: build.yml  docs.yml  test.yml
src/: api.rs  config.rs  main.rs  repl.rs  stdin.rs  stdio.rs
