[package]
name = "fsqlctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clearscreen = "4.0.2"
rand = "0.9.2"
reqwest = {version = "0.12.23", features = ["blocking", "json"] }
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
