[package]
name = "fsqlctl"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clearscreen = "4.0.2"
rand = "0.9.2"
reqwest = {version = "0.12.23", features = ["blocking", "json"] }
serde = {version = "1.0.228", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"] }


# Like pyproject.toml, cargo.toml allows tool configuration; cross is a tool
# for cross compiling to various targets
[package.metadata.cross.build]

[target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH"
]
